// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headers|PageHeader With Subtitle 1`] = `
<PageHeader
  subtitle="Here is a subtitle"
>
  <header
    className="page-header py-10 px-5 bg-primary-lighter"
  >
    <h1
      className="title m-auto max-w-5xl"
    >
      Hello World
    </h1>
    <p
      className="m-auto max-w-5xl"
    >
       
      Here is a subtitle
    </p>
  </header>
</PageHeader>
`;

exports[`Storyshots Headers|PageHeader With Text Content 1`] = `
<PageHeader>
  <header
    className="page-header py-10 px-5 bg-primary-lighter"
  >
    <h1
      className="title m-auto max-w-5xl"
    >
      Hello World
    </h1>
  </header>
</PageHeader>
`;
